Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-47272

QPrinter::paperSize() gives wrong data

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.6.0 RC
    • 5.5.0
    • GUI: Printing
    • None
    • windows
    • a2f360360cbb8f567bc32d7fc1d668f238806483

      When Label Printer is used QPrinter::paperSize(QPrinter::Millimeter); returns wrong data. If Dymo LabelPrinter 400 is used for the "label 99012" paper size gives to 27.8 and 88.6 mm where as the original size reported by drivers is 35.7 and 88.6 mm if we check via Windows/printer and device/ Printserver properties.

      On some machine it gives even more bizarre value 297.0mm x 210.0mm.

      It can be easily reproduce with this printer driver:
      Dymo LabelPrinter 400 driver from

      http://download.dymo.com/dymo/Software/Download%20Drivers/LabelWriter/Downloads/1/LabelWriterDrivers-x64.msi

        For Gerrit Dashboard: QTBUG-47272
        # Subject Branch Project Status CR V

            andysh Andy Shaw
            qtcomsupport Qt Support
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes